--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "files.autoSave": "onWindowChange",
+    "files.autoSave": "afterDelay",
     "editor.wordWrap": "on",
     "editor.autoClosingBrackets": "languageDefined",
     "editor.autoSurround": "languageDefined",
