--- a/.github/workflows/php-syntax-check.yml
+++ b/.github/workflows/php-syntax-check.yml
@@ -25,8 +25,8 @@ jobs:
         id: changed-files
         run: |
           # Get list of changed PHP files
-          git fetch origin ${{ github.base_ref }}
-          echo "files=$(git diff --name-only --diff-filter=ACMRT origin/${{ github.base_ref }} | grep '\.php$' | tr '\n' ' ')" >> $GITHUB_OUTPUT
+          git fetch origin $main
+          echo "files=$(git diff --name-only --diff-filter=ACMRT origin/main | grep '\.php$' | tr '\n' ' ')" >> $GITHUB_OUTPUT
 
       - name: PHP Syntax Check
         run: |
